GatwayAPI/gateway.yaml
# Siehste genamepsaced
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
  namespace: default
spec:
  gatewayClassName: contour
  addresses:
    - type: IPAddress
      value: 91.45.4.3
    - type: Hostname
      value: erkan.macht.stress
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same # All | Selector  # Same ist default
    - name: https
      protocol: HTTPS
      port: 443
    - name: tcp-redis
      protocol: TCP
      port: 6379
