GatwayAPI/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-routes
  namespace: default
spec:
  parentRefs:
  - name: example-gateway
    namespace: default    # optional, wenn gleich
    sectionName: http     # Listener-Name im Gateway
  hostnames:
  - erkan.macht.stress
  rules:
  - matches:
    - headers:
      - type: Exact
        name: neindoch
        value: "oh"
    backendRefs:
    -  name: sofa
       port: 80
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: frontend-svc
        port: 80
        weight: 10
      - name: frontend-svc2
        port: 80
        weight: 90
  - matches:
    - path:
        type: PathPrefix
        value: /api
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: api-svc
      port: 80
